# ladybird-gtk4

./: .gitignore  BitmapPaintable.cpp  CMakeLists.txt  LocationEntry.cpp  LocationSuggestions.cpp  LocationSuggestions.h  README.md  RequestManagerSoup.cpp  RequestManagerSoup.h  ViewImpl.cpp  WebContentMain.cpp  WebView.cpp  WebView.h  Window.cpp  location-entry.blp  meson.build  org.serenityos.Ladybird-gtk4.json  tab.blp  window.blp
build-aux/: org.serenityos.Ladybird-gtk4.json
cmake/: InstallRules.cmake
patches/: 0001-CMake-Include-Lagom-at-top-level.patch
po/: POTFILES.in  eo.po  fr.po  ru.po  sv.po
res/: CMakeLists.txt
src/: CMakeLists.txt
subprojects/: adwaita.wrap
